# makai

./: .gitignore  AGENTS.md  GLOSSARY.md  README.md  pyproject.toml
labs/level_01/: README.md
labs/level_01/tests/: test_ledger_transfer.py
labs/level_02/: README.md
labs/level_02/tests/: test_api_resource_modeling.py  test_concurrent_withdrawal.py
labs/level_03/: README.md
labs/level_03/tests/: test_checkout_idempotency.py  test_message_queue.py  test_outbox.py  test_retry_backoff.py
labs/level_04/: README.md
labs/level_04/tests/: test_bloom_filter.py  test_bounded_queue.py  test_cache_stampede.py  test_consistent_hashing.py  test_hash_sharding.py  test_leaky_bucket.py  test_lru_cache.py  test_request_coalescing.py  test_token_bucket.py
labs/level_05/: README.md
labs/level_05/tests/: test_circuit_breaker.py  test_crdts.py  test_multi_leader_lww.py  test_primary_replica.py  test_vector_clock.py
labs/level_06/: README.md
migrations/: 001_level_01_ledger.sql  002_level_02_reservations.sql  003_level_03_checkout_workflows.sql  004_level_04_scale_paths.sql  005_level_05_resilience.sql  006_level_06_launch_drills.sql
src/system_design_labs/: __init__.py  api_resource_modeling.py  bloom_filter.py  bounded_queue.py  cache_stampede.py  circuit_breaker.py  concurrent_withdrawal.py  consistent_hashing.py  crdts.py  hash_sharding.py  leaky_bucket.py  lru_cache.py  message_queue.py  mini_lsm.py  multi_leader_lww.py  outbox.py  primary_replica.py  request_coalescing.py  retry_backoff.py  token_bucket.py  toy_raft.py  vector_clock.py  workloads.py
(+56 files in other folders)
