[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "system-design-labs"
version = "0.1.0"
description = "Runnable system design interview prep labs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
]

[project.scripts]
sdl-db = "system_design_labs.db.runner:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["labs"]
pythonpath = [
    "src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/system_design_labs"]
